Allow the dropdown menu to be configured onwiki instead of in LocalSettings.php
The syntax for the brand new message [[MediaWiki:Refreshed-wiki-dropdown]]
is:
* Wiki name|logo image URL|wiki URL

For example:
* Meta|{{SERVER}}{{SCRIPTPATH}}/skins/Refreshed/refreshed/images/brickimedia.svg
|http://meta.brickimedia.org/wiki/Main_Page

The current site's normal logo can be defined via
[[MediaWiki:Refreshed-this-wiki-wordmark]] and the mobile one can be
defined via [[MediaWiki:Refreshed-this-wiki-mobile-logo]].
Right now [[MediaWiki:Refreshed-this-wiki-wordmark]] is empty by default
even though it should have a default value, but we don't yet have a
default logo (this is a bug and should be fixed by creating a default
logo, maybe even something simple as an image saying "change me!" or
whatever).

The URL where the logo wordmark points to is by default the current wiki's
main page (when [[MediaWiki:Refreshed-wiki-dropdown]] is empty), but this
is customizable via [[MediaWiki:Refreshed-this-wiki-url]].

Bug: T134669
Change-Id: I2c83f2b6097670c88895a4509086da6d35407b03

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -3,5 +3,9 @@
 		"authors": []
 	},
 	"refreshed-advert": "Advertisement",
-	"refreshed-navigation": "-"
+	"refreshed-navigation": "-",
+	"refreshed-this-wiki-mobile-logo": "-",
+	"refreshed-this-wiki-url": "-",
+	"refreshed-this-wiki-wordmark": "",
+	"refreshed-wiki-dropdown": ""
 }
