Move description to the i18n file
Bug: T146007
Change-Id: I2f1de7db83354db2a970584d3913d4f1141eb8e7

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -3,6 +3,7 @@
 		"authors": []
 	},
 	"refreshed-advert": "Advertisement",
+	"refreshed-desc": "A clean, modern MediaWiki skin with extensive CSS customisability",
 	"refreshed-navigation": "-",
 	"refreshed-this-wiki-mobile-logo": "-",
 	"refreshed-this-wiki-url": "-",
