--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -1,12 +1,16 @@
 {
 	"@metadata": {
 		"authors": [
+			"Jack Phoenix",
 			"Liuxinyu970226",
+			"MtMNC",
 			"Umherirrender"
 		]
 	},
 	"refreshed-advert": "The header shown above the footer advert\n{{Identical|Advertisement}}",
 	"refreshed-desc": "{{desc|name=Refreshed|url=https://www.mediawiki.org/wiki/Skin:Refreshed|what=skin}}",
+	"refreshed-icon-logged-in": "URL to an icon that appears next to the user's username when the user is logged in; if not customized, which is the default, a smiling face is shown; if the SocialProfile extension is installed and configured for avatars, this message has no effect, and instead the appropriate SocialProfile icon is shown; compare to {{msg-mw|refreshed-icon-logged-out}}",
+	"refreshed-icon-logged-out": "URL to an icon that appears next to the {{msg-mw|login}} message when the user is not logged in; if not customized, which is the default, a sleeping face is shown; if the SocialProfile extension is installed and configured for avatars, this message has no effect, and instead the appropriate SocialProfile icon is shown; compare to {{msg-mw|refreshed-icon-logged-in}}",
 	"refreshed-navigation": "Navigational menus in Refreshed's header, following a similar format to MediaWiki:Sidebar",
 	"refreshed-this-wiki-mobile-logo": "URL to the mobile wordmark logo, if any",
 	"refreshed-this-wiki-url": "URL to the wiki's main page or some other page where clicking the wiki wordmark should take the user to; if not customized, which is the default, the user is taken to the wiki's main page",
