--- a/i18n/qqq.json
+++ b/i18n/qqq.json
@@ -8,12 +8,17 @@
 		]
 	},
 	"refreshed-advert": "The header shown above the footer advert\n{{Identical|Advertisement}}",
+	"refreshed-action-addsection": "The text for the Add Section action button",
 	"refreshed-desc": "{{desc|name=Refreshed|url=https://www.mediawiki.org/wiki/Skin:Refreshed|what=skin}}",
+	"refreshed-explore": "The text for the Explore button in the header",
 	"refreshed-icon-logged-in": "URL to an icon that appears next to the user's username when the user is logged in; if not customized, which is the default, a smiling face is shown; if the SocialProfile extension is installed and configured for avatars, this message has no effect, and instead the appropriate SocialProfile icon is shown; compare to {{msg-mw|refreshed-icon-logged-out}}",
 	"refreshed-icon-logged-out": "URL to an icon that appears next to the {{msg-mw|login}} message when the user is not logged in; if not customized, which is the default, a sleeping face is shown; if the SocialProfile extension is installed and configured for avatars, this message has no effect, and instead the appropriate SocialProfile icon is shown; compare to {{msg-mw|refreshed-icon-logged-in}}",
 	"refreshed-navigation": "Navigational menus in Refreshed's header, following a similar format to MediaWiki:Sidebar",
+	"refreshed-page-tools": "Label for some page actions in the toolbox dropdown",
 	"refreshed-this-wiki-mobile-logo": "URL to the mobile wordmark logo, if any",
 	"refreshed-this-wiki-url": "URL to the wiki's main page or some other page where clicking the wiki wordmark should take the user to; if not customized, which is the default, the user is taken to the wiki's main page",
 	"refreshed-this-wiki-wordmark": "URL to the wiki's wordmark logo (which should be 144x30px), because the Refreshed skin does not use [[mediawikiwiki:Manual:$wgLogo|$wgLogo]]",
-	"refreshed-wiki-dropdown": "Message for configuring the wiki dropdown menu.\nThe syntax is:* Name of the wiki|URL to the wiki's logo|Wiki's URL\nEntries are separated by newlines.\nFor example:\n* English Wikipedia|http://www.example.com/images/wikipedia-wordmark-logo.svg|https://en.wikipedia.org\n* Brickipedia|http://images.brickimedia.org/b/b4/Brickipedia.svg|http://en.brickimedia.org/"
+	"refreshed-user-tools": "Label for some page user-related actions in the toolbox dropdown",
+	"refreshed-wiki-dropdown": "Message for configuring the wiki dropdown menu.\nThe syntax is:* Name of the wiki|URL to the wiki's logo|Wiki's URL\nEntries are separated by newlines.\nFor example:\n* English Wikipedia|http://www.example.com/images/wikipedia-wordmark-logo.svg|https://en.wikipedia.org\n* Brickipedia|http://images.brickimedia.org/b/b4/Brickipedia.svg|http://en.brickimedia.org/",
+	"refreshed-wiki-tools": "Label for some general site tools in the sidebar"
 }
