Add link to the skin's MediaWiki.org talk page from Special:Preferences
Change-Id: I73903d850be1b8e7ac4e775a03953eab9715b4c5

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -2,6 +2,7 @@
 	"@metadata": {
 		"authors": []
 	},
+	"refreshed-prefs-talkpage": "[[mw:Skin talk:Refreshed|{{int:talk}}]]",
 	"refreshed-advert": "Advertisement",
 	"refreshed-action-addsection": "Add topic",
 	"refreshed-desc": "A clean, modern MediaWiki skin with extensive CSS customisability",
