i18n: add skin name
Change-Id: I0598844663eb24331dc0f61ba992d67ac5458fd5
Signed-off-by: RhinosF1 <wikitech@rhinosf1.com>

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -16,5 +16,6 @@
 	"refreshed-this-wiki-wordmark": "",
 	"refreshed-user-tools": "User tools",
 	"refreshed-wiki-dropdown": "",
-	"refreshed-wiki-tools": "Wiki tools"
+	"refreshed-wiki-tools": "Wiki tools",
+	"skinname-refreshed": "Refreshed"
 }
